Fix Masonry on safari

--- a/css/site.css
+++ b/css/site.css
@@ -1063,8 +1063,8 @@ nav ul, nav li, nav a {
 }
 
 /* line 11, ../sass/partials/_blog.scss */
-.grid-item {
-  padding: 1em;
+.grid-item-wrapper {
+  margin: 1em;
 }
 
 /* line 15, ../sass/partials/_blog.scss */
@@ -1072,11 +1072,14 @@ nav ul, nav li, nav a {
   margin-top: 0.75em;
 }
 
-/* line 19, ../sass/partials/_blog.scss */
-.post h1 {
-  font-size: 44px;
-  margin-top: 1.25em;
-  margin-bottom: 1.25em;
+@media screen and (min-width: 900px) {
+  /* line 19, ../sass/partials/_blog.scss */
+  .post h1 {
+    font-size: 2.75em;
+    line-height: 1.09091em;
+    margin-top: 1.25em;
+    margin-bottom: 1.25em;
+  }
 }
 
 /* line 1, ../sass/partials/_posts.scss */
@@ -1084,37 +1087,47 @@ nav ul, nav li, nav a {
   margin-bottom: 3em;
 }
 
-/* line 5, ../sass/partials/_posts.scss */
-.post p {
-  margin: 1em 10%;
+@media screen and (min-width: 700px) {
+  /* line 5, ../sass/partials/_posts.scss */
+  .post p {
+    margin: 1em 10%;
+  }
 }
 
-/* line 9, ../sass/partials/_posts.scss */
+/* line 11, ../sass/partials/_posts.scss */
 .post-taglines {
-  margin-top: 24em;
   background-color: #f4f4f4;
   color: #45433f;
+  margin-top: 1.5em;
   padding: 1em;
 }
+@media screen and (min-width: 900px) {
+  /* line 11, ../sass/partials/_posts.scss */
+  .post-taglines {
+    margin-top: 24em;
+  }
+}
 
-/* line 17, ../sass/partials/_posts.scss */
+/* line 21, ../sass/partials/_posts.scss */
 .post-taglines p {
   margin: 0;
   padding: 0;
 }
 
-/* line 22, ../sass/partials/_posts.scss */
-.post-email {
-  margin-top: 27em;
+@media screen and (min-width: 900px) {
+  /* line 26, ../sass/partials/_posts.scss */
+  .post-email {
+    margin-top: 27em;
+  }
 }
 
-/* line 26, ../sass/partials/_posts.scss */
+/* line 32, ../sass/partials/_posts.scss */
 .post-meta {
   margin-top: 3em;
   margin-bottom: 3em;
 }
 
-/* line 31, ../sass/partials/_posts.scss */
+/* line 37, ../sass/partials/_posts.scss */
 .post-active {
   margin-top: 22.5em;
   background-color: #f4f4f4;
